--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,10 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 
 	<properties>
 		<module.name>com.pragmatickm.all</module.name>
+		<!-- SonarCloud.io -->
+		<sonar.projectKey>${project.groupId}:${project.artifactId}</sonar.projectKey>
+		<sonar.organization>aoindustries</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<name>PragmaticKM All²</name>
