--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 		<relativePath>../parent/pom.xml</relativePath>
 	</parent>
 
-	<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-all</artifactId><version>1.6.0-SNAPSHOT</version>
+	<groupId>com.pragmatickm</groupId><artifactId>pragmatickm-all</artifactId><version>1.6.0</version>
 	<packaging>bundle</packaging>
 
 	<properties>
@@ -72,7 +72,7 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 		<connection>scm:git:git://github.com/aoindustries/pragmatickm-all.git</connection>
 		<developerConnection>scm:git:git@github.com:aoindustries/pragmatickm-all.git</developerConnection>
 		<url>https://github.com/aoindustries/pragmatickm-all</url>
-		<tag>HEAD</tag>
+		<tag>pragmatickm-all-1.6.0</tag>
 	</scm>
 
 	<issueManagement>
