--- a/book/pom.xml
+++ b/book/pom.xml
@@ -71,20 +71,20 @@ along with pragmatickm-all.  If not, see <http://www.gnu.org/licenses />.
 	</developers>
 
 	<scm>
-		<connection>scm:git:git://github.com/aoindustries/pragmatickm-all.git</connection>
-		<developerConnection>scm:git:git@github.com:aoindustries/pragmatickm-all.git</developerConnection>
-		<url>https://github.com/aoindustries/pragmatickm-all</url>
+		<connection>scm:git:git://github.com/ao-apps/pragmatickm-all.git</connection>
+		<developerConnection>scm:git:git@github.com:ao-apps/pragmatickm-all.git</developerConnection>
+		<url>https://github.com/ao-apps/pragmatickm-all</url>
 		<tag>HEAD</tag>
 	</scm>
 
 	<issueManagement>
 		<system>GitHub Issues</system>
-		<url>https://github.com/aoindustries/pragmatickm-all/issues</url>
+		<url>https://github.com/ao-apps/pragmatickm-all/issues</url>
 	</issueManagement>
 
 	<ciManagement>
 		<system>GitHub Actions</system>
-		<url>https://github.com/aoindustries/pragmatickm-all/actions</url>
+		<url>https://github.com/ao-apps/pragmatickm-all/actions</url>
 	</ciManagement>
 
 	<repositories>
