--- a/pom.xml
+++ b/pom.xml
@@ -238,7 +238,7 @@ along with pragmatickm-all.  If not, see <https://www.gnu.org/licenses/>.
         <groupId>com.pragmatickm</groupId><artifactId>pragmatickm-password-servlet</artifactId><version>1.8.1${POST-SNAPSHOT}</version>
       </dependency>
       <dependency>
-        <groupId>com.pragmatickm</groupId><artifactId>pragmatickm-password-taglib</artifactId><version>1.8.1-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
+        <groupId>com.pragmatickm</groupId><artifactId>pragmatickm-password-taglib</artifactId><version>1.8.1${POST-SNAPSHOT}</version>
       </dependency>
       <dependency>
         <groupId>com.pragmatickm</groupId><artifactId>pragmatickm-procedure-model</artifactId><version>1.5.0${POST-SNAPSHOT}</version>
