--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@ along with pragmatickm-all.  If not, see <https://www.gnu.org/licenses/>.
     <relativePath>../parent/pom.xml</relativePath>
   </parent>
 
-  <groupId>com.pragmatickm</groupId><artifactId>pragmatickm-all</artifactId><version>1.6.3-SNAPSHOT</version>
+  <groupId>com.pragmatickm</groupId><artifactId>pragmatickm-all</artifactId><version>1.6.3</version>
   <packaging>bundle</packaging>
 
   <properties>
@@ -72,7 +72,7 @@ along with pragmatickm-all.  If not, see <https://www.gnu.org/licenses/>.
     <connection>scm:git:git://github.com/ao-apps/pragmatickm-all.git</connection>
     <developerConnection>scm:git:git@github.com:ao-apps/pragmatickm-all.git</developerConnection>
     <url>https://github.com/ao-apps/pragmatickm-all</url>
-    <tag>HEAD</tag>
+    <tag>pragmatickm-all-1.6.3</tag>
   </scm>
 
   <issueManagement>
