--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@ along with pragmatickm-all.  If not, see <https://www.gnu.org/licenses/>.
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
 
-  <name>PragmaticKM All²</name>
+  <name>PragmaticKM All</name>
   <url>https://pragmatickm.com/all/</url>
   <description>Convenience POM to include most PragmaticKM features, not including documentation or examples.</description>
   <inceptionYear>2016</inceptionYear>
